# stm32-toolchain

./: .gitignore  CMakeLists.txt  README.md
cmake/: CodeAnalysis.cmake  CodeFormat.cmake  STM32-toolchain.cmake  stm32_gcc.cmake
drivers/: CMakeLists.txt
include/: counter.h
lib/: CMakeLists.txt  counter.c
src/: CMakeLists.txt  main.c
