#####################################################################
#                            CMSIS                                  #
#####################################################################
string(TOLOWER ${STM32_FAMILY} STM32_FAMILY_L)
add_library(CMSIS STATIC CMSIS/Source/startup_stm32${STM32_FAMILY_L}xx.s CMSIS/Source/system_stm32${STM32_FAMILY_L}xx.c)
target_include_directories(CMSIS PUBLIC CMSIS/Include)

#####################################################################
#                             HAL                                   #
#####################################################################


#####################################################################
#                             BSP                                   #
#####################################################################